--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,7 +1,11 @@
 @import 'variables'
 
 * 
-    margin: 0
+    margin: 0 auto
     padding: 0
     box-sizing: border-box
     font-family: $primary-font
+
+body
+    background-color: $body-bg-color
+    max-width: 1440px
