--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,1 +1,7 @@
 @import 'fonts'
+
+$body-bg-color: #FFF
+$text-color: #9F9F9F
+$text-color-secondary: #3019B2
+$border-gray: 1px solid #F0F0F0
+$input-bg-color: #F6F5F2
