feat: promotions component with styles

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -3,5 +3,7 @@
 $body-bg-color: #FFF
 $text-color: #9F9F9F
 $text-color-secondary: #3019B2
+$text-color-tertiary: #271C47
+$highlight-color: #F7CA11
 $border-gray: 1px solid #F0F0F0
 $input-bg-color: #F6F5F2
