feat: categories component with styles

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,9 +1,11 @@
 @import 'fonts'
 
 $body-bg-color: #FFF
+$card-bg-color: #F4F4F4
 $text-color: #9F9F9F
 $text-color-secondary: #3019B2
 $text-color-tertiary: #271C47
+$text-color-quaternary: #271C47
 $highlight-color: #F7CA11
 $border-gray: 1px solid #F0F0F0
 $input-bg-color: #F6F5F2
