feat: RelatedProducts component with styles

--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -1,3 +1,10 @@
+@use 'variables'
+    
 @mixin btn-hover
     opacity: 0.9
     transition: 0.4s
+
+@mixin title
+    color: #3442B5
+    font-size: 30px
+    font-weight: 700
