--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -5,7 +5,13 @@ $card-bg-color: #F4F4F4
 $text-color: #9F9F9F
 $text-color-secondary: #3019B2
 $text-color-tertiary: #271C47
-$text-color-quaternary: #271C47
+$text-color-quaternary: #4E4E4E
+$text-color-nav-categories: #3B3B3B
+$text-color-nav-categories-hover: #3442B5
+$text-color-product-primary: #3F3F40
+$text-color-product-secondary: #808080
 $highlight-color: #F7CA11
 $border-gray: 1px solid #F0F0F0
 $input-bg-color: #F6F5F2
+$border-color: #DEDEDE
+$border-color-secondary: #CCC
