--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -6,6 +6,7 @@ $text-color: #9F9F9F
 $text-color-secondary: #3019B2
 $text-color-tertiary: #271C47
 $text-color-quaternary: #4E4E4E
+$text-color-light: #FFF
 $text-color-nav-categories: #3B3B3B
 $text-color-nav-categories-hover: #3442B5
 $text-color-product-primary: #3F3F40
