feat: footer component with styles

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -11,6 +11,7 @@ $text-color-nav-categories: #3B3B3B
 $text-color-nav-categories-hover: #3442B5
 $text-color-product-primary: #3F3F40
 $text-color-product-secondary: #808080
+$text-color-footer: rgba(34, 34, 34, 0.71)
 $highlight-color: #F7CA11
 $border-gray: 1px solid #F0F0F0
 $input-bg-color: #F6F5F2
