--- a/src/styles/fonts.sass
+++ b/src/styles/fonts.sass
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap')
 
 $primary-font: 'Poppins', sans-serif
 $newsletter-font: 'Outfit', serif
+$footer-font: "Work Sans", serif
