--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -14,6 +14,7 @@ $text-color-product-secondary: #808080
 $text-color-footer: rgba(34, 34, 34, 0.71)
 $highlight-color: #F7CA11
 $border-gray: 1px solid #F0F0F0
+$border-color-modal: #707070
 $input-bg-color: #F6F5F2
 $border-color: #DEDEDE
 $border-color-secondary: #CCC
