feat: implement carousel

--- a/src/components/RelatedProducts/productsCard.sass
+++ b/src/components/RelatedProducts/productsCard.sass
@@ -15,6 +15,7 @@
         width: 278px
     
     .product-title
+        margin: 0
         color: variables.$text-color-product-primary
         font-size: 15px
         font-weight: 300
