--- a/src/components/RelatedProducts/relatedProducts.sass
+++ b/src/components/RelatedProducts/relatedProducts.sass
@@ -2,7 +2,7 @@
 @use '../../styles/mixins'
     
 .related-products-container
-    width: 1364px
+    max-width: 1364px
     height: 613px
     display: flex
     flex-direction: column
@@ -31,6 +31,32 @@
         display: flex
         align-items: center
         margin-top: 24px
+
+        .products-arrow
+            width: 32px
+            height: 32px
+            box-shadow: 0px 6px 12px 0px rgba(0,0,0, 0.13)
+            border-radius: 50%
+            display: flex
+            align-items: center
+            justify-content: center
+
+            &:hover
+                cursor: pointer
+
+            img
+                width: 8px
+                height: 12px
+
+        .products-carousel
+            max-width: 1270px
+            display: flex
+            overflow-x: auto
+            scroll-behavior: smooth
+            gap: 18px
+
+            &::-webkit-scrollbar
+                display: none
     
             
     
