--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -46,21 +46,35 @@
         .search
             width: 630px
             height: 48px
+            display: flex
+            align-items: center
+            background-color: variables.$input-bg-color
+            border-radius: 10px
+            padding-right: 24px
+
 
             .search-txt
                 width: 100%
                 height: 100%
-                border-radius: 10px
                 padding-left: 16px
                 border: 0
                 outline: 0
-                background-color: variables.$input-bg-color
+                background-color: transparent
                 color: variables.$text-color
                 font-size: 14px
                 font-weight: 500
 
                 &::placeholder
                     color: variables.$text-color
+            img
+                width: 28px
+                height: 28px
+                
+                &:hover
+                    cursor: pointer
+                    opacity: 0.6
+                    transition: 0.4s
+
         
         .icons
             width: 216px
