--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -18,3 +18,4 @@ $border-color-modal: #707070
 $input-bg-color: #F6F5F2
 $border-color: #DEDEDE
 $border-color-secondary: #CCC
+$border-color-tertiary: #D9D9D9
