--- a/src/components/RelatedProducts/productsCard.sass
+++ b/src/components/RelatedProducts/productsCard.sass
@@ -10,6 +10,7 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+    margin-bottom: 10px
 
     img
         width: 278px
