--- a/src/components/Categories/categories.sass
+++ b/src/components/Categories/categories.sass
@@ -1,4 +1,5 @@
 @use '../../styles/variables'
+@use '../../styles/mixins'
 
 #categories-container
     width: 1170px
@@ -36,6 +37,8 @@
         img
             width: 61px
             height: 61px
+            &:hover
+                @include mixins.icon-hover
 
     .active-icon
         background-color: variables.$body-bg-color
