--- a/src/components/Footer/footer.sass
+++ b/src/components/Footer/footer.sass
@@ -1,4 +1,5 @@
 @use '../../styles/variables'
+@use '../../styles/mixins'
 
 #footer-container
     width: 1440px
@@ -45,6 +46,9 @@
                     margin: 0
                     width: 24px
                     height: 24px
+                    
+                    &:hover
+                        @include mixins.icon-hover
         
         .links
             margin: 0
