--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -1,4 +1,5 @@
 @use '../../styles/variables'
+@use '../../styles/mixins'
 
 .header-container
     width: 1280px
@@ -84,8 +85,12 @@
 
             img 
                 width: 32px
+                &:hover
+                    @include mixins.icon-hover
+
             img:first-child
                 width: 24px
+
 
 img
     width: 20px
@@ -93,3 +98,4 @@ img
 .highlight
     color: variables.$text-color-secondary
     font-weight: 600
+
