--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -4,7 +4,11 @@
     opacity: 0.9
     transition: 0.4s
 
+@mixin icon-hover
+    cursor: pointer
+    filter: brightness(0) saturate(100%) invert(26%) sepia(28%) saturate(3870%) hue-rotate(211deg) brightness(98%) contrast(91%)
+
 @mixin title
-    color: #3442B5
+    color: #271C47
     font-size: 30px
     font-weight: 700
