fix: categories hover

--- a/src/components/Categories/categories.sass
+++ b/src/components/Categories/categories.sass
@@ -37,6 +37,8 @@
         img
             width: 61px
             height: 61px
+            
+        .hover
             &:hover
                 @include mixins.icon-hover
 
