--- a/src/components/RelatedProducts/productsCard.sass
+++ b/src/components/RelatedProducts/productsCard.sass
@@ -11,6 +11,9 @@
     flex-direction: column
     justify-content: space-between
     margin-bottom: 10px
+    transition: transform 0.3s ease, filter 0.3s
+    &:hover
+        transform: scale(1.01) 
 
     img
         width: 278px
