--- a/src/components/Categories/categories.sass
+++ b/src/components/Categories/categories.sass
@@ -18,9 +18,9 @@
         color: variables.$text-color-quaternary
         font-weight: 500
         justify-content: space-between
-
+        transition: transform 0.3s ease, filter 0.3s
         &:hover
-            cursor: pointer
+            @include mixins.transform
             color: variables.$text-color-secondary
             font-weight: 600
 
@@ -33,6 +33,7 @@
         display: flex
         align-items: center
         justify-content: center
+        
 
         img
             width: 61px
