--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -12,3 +12,7 @@
     color: #271C47
     font-size: 30px
     font-weight: 700
+
+@mixin transform
+    cursor: pointer
+    transform: scale(1.1) 
